test/error/end_label_gen_block_only.sv
// pattern: block has only end label "no"
module top;
    if (1) begin
        wire x;
    end : no
endmodule
